--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "webDiplomacy"]
 	path = webDiplomacy
-	url = https://github.com/kestasjk/webDiplomacy
+	url = https://github.com/aezick/webDiplomacy
